--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.2.0
   get: ^4.6.6
+  shared_preferences: ^2.2.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,8 @@ flutter:
     - assets/images/1.png
     - assets/images/2.png
     - assets/images/3.png
+    - assets/images/4.png
+    - assets/images/5.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
